added test completed version without answers and mobile/tablet

--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -194,6 +194,23 @@
   }
 
 
+  &--green {
+    background: $green;
+    border: 1px solid $green;
+    color: #ffffff;
+
+    svg path { fill: #ffffff; }
+
+    &:hover {
+      background-color: darken($green, 5%);
+    }
+
+    &:active {
+      background-color: darken($green, 5%);
+    }
+  }
+
+
   &--arrow {
     width: 27px;
     height: 27px;
