--- a/src/sass/components/test-quest.scss
+++ b/src/sass/components/test-quest.scss
@@ -25,11 +25,10 @@
 	  line-height: 1.2;
 	}
 
-	&__desrc,
-	&__desrc p {
+	&__desrc{
 		color: #37474F;
 		font-size: 14px;
-		line-height: 1.1;
+		line-height: 1.5;
 		margin: 0;
 		padding: 0 0 10px;
 	}
