--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -53,6 +53,8 @@
 @import "components/test-quest";
 @import "components/test-content";
 @import "components/test-answers";
+@import "components/complete-answers";
+@import "components/test-result";
 
 /*=== страницы ===*/
 @import "pages/layout";
