--- a/src/sass/components/test-answers.scss
+++ b/src/sass/components/test-answers.scss
@@ -48,7 +48,7 @@
 	input[type="checkbox"]:checked + .test-answers__label:before,
 	input[type="checkbox"] + .test-answers__label:hover:before,
 	input[type="radio"]:checked + .test-answers__label:before,
-	input[type="radio"] + .test-answers__label:hover:before,{
+	input[type="radio"] + .test-answers__label:hover:before{
 		background: url(../img/svg/checked-white-icon.svg) 50% 50% no-repeat $yellow;
 		background-size: 10px;
 		border: 2px solid $yellow;
