--- a/src/sass/base/grid.scss
+++ b/src/sass/base/grid.scss
@@ -823,7 +823,7 @@
   background-color: transparent;
   color: transparent;
   text-shadow: none;
-  font: 0/0 a;
+  font: 0/0 ;
 }
 .hidden {
   display: none !important;
