--- a/src/sass/components/forum.scss
+++ b/src/sass/components/forum.scss
@@ -102,9 +102,8 @@
 
   &__comment-date {
     display: inline;
-    margin: 0;
+    margin: 0 15px 0 0;
     padding: 0;
-    margin-right: 15px;
     color: #acacac;
     font-size: 13px;
     line-height: 1.1;
