--- a/src/sass/components/section-nav.scss
+++ b/src/sass/components/section-nav.scss
@@ -47,6 +47,8 @@
 		text-align: center;
 		vertical-align: baseline;
 		background: $gray;
+
+		@media (max-width: $tablet) { padding: 25px 0; }
 	}
 
 
@@ -79,7 +81,7 @@
 
 	&__btns {
 		float: right;
-
+		
 		@media (max-width: $desktop) { float: left; }
 	}
 
@@ -105,6 +107,8 @@
 		padding: 0;
 		display: inline-block;
 		color: $gray-darker;
+
+		@media (max-width: $tablet) { padding-bottom: 10px; }
 	}
 
 	&__next-link {
