--- a/src/sass/components/test-progress.scss
+++ b/src/sass/components/test-progress.scss
@@ -16,10 +16,10 @@
 		color: #78909C;
 		text-decoration: none;
 		text-align: center;
-		margin-right: 7px;
+		margin: 5px 7px 0 0;
 
 		@media (max-width: $tablet ) {
-			width: 15px;
+			width: 13px;
 			font-size: 0;
 			margin-right: 5px;
 		}
@@ -63,6 +63,15 @@
 			background: $red;
 			color: #fff;
 			cursor: default;
+		}
+	}
+
+	&--long {
+
+		.test-progress__step {
+			font-size: 0;
+			width: 13px;
+			margin-right: 4px;
 		}
 	}
 }
