--- a/src/sass/components/page-top.scss
+++ b/src/sass/components/page-top.scss
@@ -1,7 +1,7 @@
 .page-header {
   padding: 50px 0 50px;
+  border-bottom: 1px solid #cfd8dc;
   background-color: $gray;
-  border-bottom: 1px solid #CFD8DC;
 
   &__title {
     margin: 0;
