--- a/src/sass/components/course-brief.scss
+++ b/src/sass/components/course-brief.scss
@@ -21,28 +21,28 @@
 
     &:before {
       position: absolute;
-      content: '';
       top: -32px;
-      left: 0;
       right: 0;
+      left: 0;
       height: 35px;
       background: url(../img/svg/contour.svg) 0 0 no-repeat;
       background-size: 100% 185px;
+      content: "";
     }
-    
+
     // fixing svg bug
     &:after {
       position: absolute;
-      content: '';
       top: -28px;
-      left: 0;
       right: 0;
+      left: 0;
       width: 1px;
       height: 35px;
       background: #ffffff;
+      content: "";
     }
 
-    &--gray{
+    &--gray {
       background: $gray;
 
       &:before {
@@ -54,8 +54,6 @@
         background: $gray;
       }
     }
-
-
   }
 
 
