--- a/src/sass/components/section-content.scss
+++ b/src/sass/components/section-content.scss
@@ -1,54 +1,56 @@
 .section-content {
-	padding: 25px 25px 0;
-	background: #FAFAFA;
-	border: 1px solid #CFD8DC;
-	border-radius: 6px;
+  padding: 25px 25px 0;
+  border: 1px solid #cfd8dc;
+  border-radius: 6px;
+  background: #fafafa;
 
-	@media (max-width: $tablet) {
-		border: none;
-		background: transparent;
-		padding: 0;
-	}
+  @media (max-width: $tablet) {
+    padding: 0;
+    border: none;
+    background: transparent;
+  }
 
-	@media (max-width: $desktop) {
-		margin-bottom: 25px;
-	}
+  @media (max-width: $desktop) {
+    margin-bottom: 25px;
+  }
 
-	&__descr,
-	&__descr p {
-		margin: 0 0 20px;
-		padding: 0;
+  &__descr,
+  &__descr p {
+    margin: 0 0 20px;
+    padding: 0;
 
-		@media (max-width: $tablet) { display: none; }
-	}
+    @media (max-width: $tablet) {
+      display: none;
+    }
+  }
 
+  &__descr-btn {
+    @media (min-width: $tablet) {
+      display: none;
+    }
+  }
 
-	&__descr-btn {
+  &__media {
+    position: relative;
+    width: 100%;
+    margin: 0 0 20px;
 
-		@media (min-width: $tablet) {
-			display: none;
-		}
-	}
+    @media (max-width: $tablet) {
+      margin-top: 25px;
+    }
 
-	&__media {
-		width: 100%;
-		margin: 0 0 20px;
-		position: relative;
+    video {
+      width: 100%;
+    }
+  }
 
-		@media (max-width: $tablet) {
-			margin-top: 25px;
-		}
+  .forum {
+    &__messages {
+      width: 100%;
+    }
 
-		video {
-			width: 100%;
-		}
-	}
-
-	.forum {
-
-		&__messages { width: 100%; }
-
-		@media (max-width: $desktop) { display: none; }
-	}
-
+    @media (max-width: $desktop) {
+      display: none;
+    }
+  }
 }
