--- a/src/sass/components/test-complete.scss
+++ b/src/sass/components/test-complete.scss
@@ -1,79 +1,85 @@
 .test-complete {
-	padding: 20px 40px;
-	border-left: 1px solid #cfd8dc;
-	border-right: 1px solid #cfd8dc;
-	border-bottom: 1px solid #cfd8dc;
-	@include clearfix();
+  padding: 20px 40px;
+  border-right: 1px solid #cfd8dc;
+  border-bottom: 1px solid #cfd8dc;
+  border-left: 1px solid #cfd8dc;
 
-	@media (max-width: $tablet) {
-		padding: 15px 13px;
-		border: none;
-	}
+  @include clearfix();
 
-	&__info {
-		float: left;
+  @media (max-width: $tablet) {
+    padding: 15px 13px;
+    border: none;
+  }
 
-		@media (max-width: $tablet) { width: 100%; }
-	}
+  &__info {
+    float: left;
 
-	&__links {
-		float: right;
-		text-align: right;
+    @media (max-width: $tablet) {
+      width: 100%;
+    }
+  }
 
-		@media (max-width: $tablet) { display: none; }
-	}
+  &__links {
+    float: right;
+    text-align: right;
 
-	&__percent {
-		display: inline-block;
-		vertical-align: top;
-		width: 55px;
-		height: 55px;
-		background: $green;
-		border-radius: 50%;
-		color: #ffffff;
-		font-family: $montserrat-bold;
-		font-size: 16px;
-		line-height: 55px;
-		margin-right: 10px;
-		text-align: center;
-	}
+    @media (max-width: $tablet) {
+      display: none;
+    }
+  }
 
-	&__title {
-		display: inline-block;
-		vertical-align: top;
-		font-family: $montserrat-bold;
-		font-size: 22px;
-		line-height: 1.3;
-		margin: 0;
-		padding: 0;
+  &__percent {
+    display: inline-block;
+    width: 55px;
+    height: 55px;
+    margin-right: 10px;
+    border-radius: 50%;
+    background: $green;
+    color: #ffffff;
+    text-align: center;
+    vertical-align: top;
+    font-family: $montserrat-bold;
+    font-size: 16px;
+    line-height: 55px;
+  }
 
-		@media (max-width: $tablet) { width: 70%; }
-	}
+  &__title {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    font-family: $montserrat-bold;
+    font-size: 22px;
+    line-height: 1.3;
 
-	&__stat {
-		font-family: $open-sans;
-		font-size: 14px;
-		color: $gray-darker;
+    @media (max-width: $tablet) {
+      width: 70%;
+    }
+  }
 
-		@media (max-width: $tablet) {
-			display: inline-block;
-			line-height: 20px;
-		}
-	}
+  &__stat {
+    color: $gray-darker;
+    font-family: $open-sans;
+    font-size: 14px;
 
-	&__next-text {
-		margin: 6px 0 0;
-		padding: 0;
-		color: $gray-darker;
-	}
+    @media (max-width: $tablet) {
+      display: inline-block;
+      line-height: 20px;
+    }
+  }
 
-	&__next-link {
-		text-decoration: underline;
-		color: $black;
+  &__next-text {
+    margin: 6px 0 0;
+    padding: 0;
+    color: $gray-darker;
+  }
 
-		&:hover {
-			color: darken($black, 15%);
-		}
-	}
+  &__next-link {
+    color: $black;
+    text-decoration: underline;
 
+    &:hover {
+      color: darken($black, 15%);
+    }
+  }
 }
