--- a/src/sass/components/test-progress.scss
+++ b/src/sass/components/test-progress.scss
@@ -1,77 +1,78 @@
 .test-progress {
-	font-size: 0;
-	padding: 0 0 20px;
+  padding: 0 0 20px;
+  font-size: 0;
 
-	@media (max-width: $tablet ) { padding: 0; }
+  @media (max-width: $tablet ) {
+    padding: 0;
+  }
 
-	&__step {
-		display: inline-block;
-		background: #ffffff;
-		height: 18px;
-		width: 18px;
-		border-radius: 3px;
-		font-family: $montserrat;
-		font-size: 10px;
-		line-height: 18px;
-		color: #78909C;
-		text-decoration: none;
-		text-align: center;
-		margin: 5px 7px 0 0;
+  &__step {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    margin: 5px 7px 0 0;
+    border-radius: 3px;
+    background: #ffffff;
+    color: #78909c;
+    text-align: center;
+    text-decoration: none;
+    font-family: $montserrat;
+    font-size: 10px;
+    line-height: 18px;
 
-		@media (max-width: $tablet ) {
-			width: 13px;
-			font-size: 0;
-			margin-right: 5px;
-		}
+    @media (max-width: $tablet ) {
+      width: 13px;
+      margin-right: 5px;
+      font-size: 0;
+    }
 
-		&--current {
-			background: $yellow;
-			position: relative;
+    &--current {
+      position: relative;
+      background: $yellow;
 
-			&:after {
-				position: absolute;
-				content: '';
-				left: 50%;
-				width: 0;
-				bottom: -23px;
-				background: transparent;
-				border: 8px solid transparent;
-		    border-bottom: 8px solid #FAFAFA;
-		    margin: 0px -8px;
+      &:after {
+        position: absolute;
+        bottom: -23px;
+        left: 50%;
+        width: 0;
+        margin: 0 -8px;
+        border: 8px solid transparent;
+        border-bottom: 8px solid #fafafa;
+        background: transparent;
+        content: "";
 
-		    @media (max-width: $tablet ) {
-					bottom: -13px;
-					border: 6px solid transparent;
-			    border-bottom: 6px solid #FAFAFA;
-			    margin: 0px -6px;
-		    }
-		  }
-		}
+        @media (max-width: $tablet ) {
+          bottom: -13px;
+          margin: 0 -6px;
+          border: 6px solid transparent;
+          border-bottom: 6px solid #fafafa;
+        }
+      }
+    }
 
-		&--missed {
-			color: #FAFAFA;
-			background: #78909C;
-		}
+    &--missed {
+      background: #78909c;
+      color: #fafafa;
+    }
 
-		&--passed {
-			background: $green;
-			color: #fff;
-			cursor: default;
-		}
+    &--passed {
+      background: $green;
+      color: #ffffff;
+      cursor: default;
+    }
 
-		&--error {
-			background: $red;
-			color: #fff;
-			cursor: default;
-		}
-	}
+    &--error {
+      background: $red;
+      color: #ffffff;
+      cursor: default;
+    }
+  }
 
-	&--long {
-
-		.test-progress__step {
-			font-size: 0;
-			width: 13px;
-			margin-right: 4px;
-		}
-	}
+  &--long {
+    .test-progress__step {
+      width: 13px;
+      margin-right: 4px;
+      font-size: 0;
+    }
+  }
 }
