--- a/src/sass/components/test-answers.scss
+++ b/src/sass/components/test-answers.scss
@@ -28,7 +28,7 @@
     font-size: 15px;
     line-height: 22px;
 
-    &:before {
+    &::before {
       position: absolute;
       top: 7px;
       left: 9px;
