--- a/src/sass/components/forum.scss
+++ b/src/sass/components/forum.scss
@@ -46,7 +46,7 @@
       .forum__avatar-wrap {
         position: relative;
 
-        &:after {
+        &::after {
           position: absolute;
           top: 0;
           right: 0;
