--- a/src/sass/components/test-progress.scss
+++ b/src/sass/components/test-progress.scss
@@ -30,7 +30,7 @@
       position: relative;
       background: $yellow;
 
-      &:after {
+      &::after {
         position: absolute;
         bottom: -23px;
         left: 50%;
