--- a/src/sass/components/logo.scss
+++ b/src/sass/components/logo.scss
@@ -1,5 +1,8 @@
 .logo {
+  display: block;
+  margin-top: 7px;
   color: #ffffff;
+  text-decoration: none;
   text-transform: uppercase;
   font-family: $montserrat-bold;
   font-size: 20px;
