Название курса и картинки - это ссылки

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -56,7 +56,7 @@
 @import "components/test-complete";
 @import "components/test-result";
 @import "components/сourses-list";
-@import "components/course-d";
+@import "components/course-preview";
 @import "components/profile-view";
 @import "components/form";
 @import "components/page-box";
