--- a/src/sass/components/course-preview.scss
+++ b/src/sass/components/course-preview.scss
@@ -87,6 +87,7 @@
 
   &__image {
     position: relative;
+    display: block;
     max-width: 70px;
 
     img {
@@ -161,9 +162,15 @@
 
   &__title {
     margin: 0;
+    color: $black;
+    text-decoration: none;
     font-family: $montserrat;
     font-size: 16px;
     font-weight: 400;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__about {
