--- a/src/sass/pages/course-section.scss
+++ b/src/sass/pages/course-section.scss
@@ -1,48 +1,52 @@
 .course-section {
+  &__body {
+    padding: 30px 0;
 
-	&__body {
-		padding: 30px 0;
+    @media (max-width: $tablet) {
+      padding: 20px 0 0;
+    }
+  }
 
-		@media (max-width: $tablet) { padding: 20px 0 0; }
-	}
+  &__title {
+    margin: 0 0 30px;
+    padding: 0;
+    line-height: 1.3;
 
-	&__title {
-	  line-height: 1.3;
-	  margin: 0 0 30px;
-	  padding: 0;
+    @media (max-width: $tablet) {
+      margin-bottom: 15px;
+    }
+    @media (min-width: $desktop) {
+      font-family: $montserrat;
+    }
+  }
 
-	  @media (max-width: $tablet) { margin-bottom: 15px; }
-		@media (min-width: $desktop) { font-family: $montserrat; }
+  &__title-icon {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    margin: 3px 10px 0 0;
+    border-radius: 50%;
+    background: #cfd8dc;
+    text-align: center;
+    vertical-align: top;
+    line-height: 20px;
 
-	}
+    @media (max-width: $tablet) {
+      display: none;
+    }
 
-	&__title-icon {
-		display: inline-block;
-		vertical-align: top;
-		height: 25px;
-		width: 25px;
-		background: #CFD8DC;
-		border-radius: 50%;
-		line-height: 20px;
-		text-align: center;
-		margin: 3px 10px 0 0;
+    svg {
+      width: 10px;
+      height: 10px;
+    }
 
-		@media (max-width: $tablet) { display: none; }
+    path {
+      fill: #78909c;
+    }
+  }
 
-		svg {
-			width: 10px;
-			height: 10px;
-		}
-
-		path {
-			fill: #78909C;
-		}
-	}
-
-	&__title-text {
-		display: inline-block;
-		width: 94%;
-	}
-
-
+  &__title-text {
+    display: inline-block;
+    width: 94%;
+  }
 }
