Ой какая тупая ошибка

--- a/src/sass/components/collapse.scss
+++ b/src/sass/components/collapse.scss
@@ -45,6 +45,10 @@
     p {
       min-width: 460px;
 
+      @media (max-width: $tablet) {
+        min-width: 100%;
+      }
+
       &:last-child {
         margin-bottom: 0;
       }
