--- a/src/sass/components/form.scss
+++ b/src/sass/components/form.scss
@@ -11,7 +11,7 @@
 
   &__error {
     margin: 0 -45px 25px;
-    padding: 20px 0;
+    padding: 20px 40px;
     border-radius: 5px;
     background-color: $yellow-light;
     text-align: center;
