--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -8,6 +8,7 @@
   font-family: $open-sans;
   font-size: 15px;
   font-weight: 400;
+  transition: all 0.3s ease;
 
   @media (max-width: $tablet) {
     font-size: 14px;
@@ -271,7 +272,7 @@
     height: 27px;
     border: 1px solid #b0bbbf;
     border-radius: 50%;
-    line-height: 26px;
+    line-height: 25px;
 
     svg {
       width: 10px;
