--- a/src/sass/components/profile-view.scss
+++ b/src/sass/components/profile-view.scss
@@ -1,6 +1,7 @@
 .profile-view {
   padding: 60px 0 50px;
   background-color: $gray;
+  background-image: url("../img/bg-pattern.png");
 
   &__image {
     float: left;
