--- a/src/sass/components/section-nav.scss
+++ b/src/sass/components/section-nav.scss
@@ -1,6 +1,7 @@
 .section-nav {
   padding: 20px 0 0;
   background: #eaeef1;
+  background-image: url("../img/bg-pattern.png");
 
   &--bottom {
     padding: 25px 0;
