--- a/src/sass/pages/course.scss
+++ b/src/sass/pages/course.scss
@@ -1,9 +1,9 @@
 .course-about {
-	padding: 30px 0 0;
-	background: $gray;
+  padding: 30px 0 0;
+  background-color: $gray;
+  background-image: url("../img/bg-pattern.png");
 
-	@media (max-width: $tablet) {
-    background: $sand;
+  @media (max-width: $tablet) {
+    background-color: $sand;
   }
-
 }
