fixed border-color for inputs, fixed complete test

--- a/src/sass/components/test-answers.scss
+++ b/src/sass/components/test-answers.scss
@@ -23,7 +23,7 @@
     display: block;
     box-sizing: border-box;
     padding: 7px 9px 7px 40px;
-    border: 1px solid $yellow;
+    border: 1px solid #CFD8DC;
     border-radius: 18px;
     font-size: 15px;
     line-height: 22px;
