Js для другой кнопки

--- a/src/sass/components/section-content.scss
+++ b/src/sass/components/section-content.scss
@@ -21,7 +21,12 @@
 
     @media (max-width: $tablet) {
       display: none;
+
+      &--open {
+        display: block;
+      }
     }
+
   }
 
   &__descr-btn {
