--- a/src/sass/components/section-content.scss
+++ b/src/sass/components/section-content.scss
@@ -14,10 +14,16 @@
     margin-bottom: 25px;
   }
 
-  &__descr,
-  &__descr p {
-    margin: 0 0 20px;
-    padding: 0;
+  &__descr {
+    
+    p {
+      margin: 0 0 20px;
+      padding: 0;
+
+      &:last-child {
+        margin: 0;
+      }
+    }
 
     @media (max-width: $tablet) {
       display: none;
@@ -38,7 +44,7 @@
   &__media {
     position: relative;
     width: 100%;
-    margin: 0 0 20px;
+    margin: 20px 0;
 
     @media (max-width: $tablet) {
       margin-top: 25px;
