--- a/src/sass/components/course-icon-link.scss
+++ b/src/sass/components/course-icon-link.scss
@@ -8,7 +8,7 @@
   background: #ffffff;
   text-align: center;
   line-height: 25px;
-  transition: all 0.3s ease;
+  transition: all $time ease;
 
   &--play svg {
     width: 10px;
