--- a/src/sass/components/section-progress.scss
+++ b/src/sass/components/section-progress.scss
@@ -38,7 +38,7 @@
       display: block;
       width: 10px;
       height: 10px;
-
+      
       @media (max-width: $tablet) {
         display: none;
       }
@@ -47,6 +47,7 @@
 
     path {
       fill: #78909c;
+      transition: all $time ease;
     }
 
     &:first-child {
