--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -8,7 +8,7 @@
   font-family: $open-sans;
   font-size: 15px;
   font-weight: 400;
-  transition: all 0.3s ease;
+  transition: all $time ease;
 
   @media (max-width: $tablet) {
     font-size: 14px;
@@ -109,7 +109,7 @@
   }
 
   &--reply {
-    padding: 2px 10px;
+    padding: 4px 10px;
     background: $gray-darker;
     color: #ffffff;
     text-transform: lowercase;
@@ -124,7 +124,7 @@
   }
 
   &--publish {
-    padding: 2px 10px;
+    padding: 4px 10px;
     background: $yellow;
     color: #37474f;
     text-transform: lowercase;
@@ -187,10 +187,7 @@
 
     svg {
       transform: rotate(90deg);
-    }
-
-    .btn-text {
-      padding-left: 5px;
+      margin-right: 5px;
     }
 
     &:hover {
@@ -209,6 +206,7 @@
 
     svg {
       transform: rotate(180deg);
+      margin-left: 5px;
     }
 
     .btn-text {
