--- a/src/sass/components/course-sections.scss
+++ b/src/sass/components/course-sections.scss
@@ -68,7 +68,7 @@
     font-family: $open-sans-bold;
     font-size: 15px;
     line-height: 27px;
-    transition: all 0.3s ease;
+    transition: all $time ease;
 
     &:hover {
       color: $green;
