--- a/src/sass/components/test-complete.scss
+++ b/src/sass/components/test-complete.scss
@@ -78,8 +78,9 @@
     color: $black;
     text-decoration: underline;
 
+
     &:hover {
-      color: darken($black, 15%);
+      text-decoration: none;
     }
   }
 }
