--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -37,6 +37,8 @@
 @import "components/link-with-number";
 @import "components/courses-list";
 @import "components/announce-alert";
+@import "components/course";
+@import "components/course-section";
 @import "components/course-base";
 @import "components/course-brief";
 @import "components/course-info";
@@ -65,9 +67,5 @@
 @import "components/filter";
 @import "components/messages";
 
-
-
 /*=== страницы ===*/
 @import "pages/layout";
-@import "pages/course";
-@import "pages/course-section";
