Added component form-alert

--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -343,4 +343,30 @@
       background-color: darken($gray, 5%);
     }
   }
+
+  &--ok {
+    padding: 2px 9px;
+    border: 1px solid #546E7A;
+    border-radius: 3px;
+    background: none;
+    color: #546E7A;
+    text-transform: uppercase;
+    font-size: 15px;
+    line-height: 16px;
+
+    @media (max-width: $tablet) {
+      font-size: 14px;
+    }
+
+    &:hover,
+    &--hover {
+      background-color: #546E7A;
+      color: #ffffff;
+    }
+
+    &:active,
+    &--active {
+      opacity: 0.8;
+    }
+  }
 }
