--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -64,6 +64,8 @@
 @import "components/collapse";
 @import "components/filter";
 @import "components/messages";
+@import "components/message-form";
+@import "components/form-alert";
 
 
 
