--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -48,7 +48,7 @@
     }
   }
 
-  &--submit {
+  &--login-submit {
     box-sizing: border-box;
     width: 100%;
     padding: 13px 10px;
@@ -109,7 +109,7 @@
   }
 
   &--reply {
-    padding: 2px 10px;
+    padding: 3px 10px;
     background: $gray-darker;
     color: #ffffff;
     text-transform: lowercase;
@@ -124,7 +124,7 @@
   }
 
   &--publish {
-    padding: 2px 10px;
+    padding: 3px 10px;
     background: $yellow;
     color: #37474f;
     text-transform: lowercase;
@@ -138,7 +138,7 @@
     }
   }
 
-  &--forum-submit {
+  &--submit {
     margin-top: 10px;
     padding: 4px 15px;
     outline: none;
