--- a/src/sass/base/grid.scss
+++ b/src/sass/base/grid.scss
@@ -12,9 +12,9 @@
   padding-left: 30px;
 }
 
-.container--small {
-  max-width: 960px;
-}
+// .container--small {
+//   max-width: 960px;
+// }
 
 @media (max-width: 768px) {
   .mobile-hide {
