--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,6 +30,8 @@
 @import "components/header";
 @import "components/menu";
 @import "components/logo";
+@import "components/course";
+@import "components/course-section";
 @import "components/user-courses";
 @import "components/notice-text";
 @import "components/progress";
