--- a/src/sass/components/сourses-list.scss
+++ b/src/sass/components/сourses-list.scss
@@ -9,20 +9,24 @@
     float: left;
 
     &--1 {
-      width: 60%;
+      width: 10%;
     }
 
     &--2 {
+      width: 50%;
+    }
+
+    &--3 {
       width: 12%;
       text-align: right;
     }
 
-    &--3 {
+    &--4 {
       width: 10%;
       text-align: center;
     }
 
-    &--4 {
+    &--5 {
       width: 18%;
 
       @media (max-width: $desktop) {
