--- a/src/sass/components/course-preview.scss
+++ b/src/sass/components/course-preview.scss
@@ -17,7 +17,7 @@
     font-size: 13px;
 
     &--1 {
-      width: 10%;
+      width: 9%;
 
       @media (max-width: $tablet) {
         float: left;
@@ -26,7 +26,7 @@
     }
 
     &--2 {
-      width: 72%;
+      width: 73%;
       font-size: 0;
 
       @media (max-width: $desktop) {
@@ -105,6 +105,7 @@
         bottom: 0;
         left: 0;
         z-index: 10;
+        border-radius: 5px;
         background-color: transparentize($green, 0.5);
         content: "";
       }
