--- a/src/sass/components/menu.scss
+++ b/src/sass/components/menu.scss
@@ -14,11 +14,16 @@
     display: inline-block;
     margin-right: 10px;
     vertical-align: top;
-    font-size: 14px;
+    font-size: 0;
 
     &:last-child {
       margin-right: 0;
     }
+  }
+
+  &__item:hover .menu__link--double,
+  &__item:hover .menu__link--add {
+    background-color: #455a64;
   }
 
   &__link {
@@ -31,6 +36,7 @@
     font-family: $montserrat;
     font-size: 14px;
     line-height: 16px;
+    cursor: pointer;
 
     &:hover,
     &--active {
@@ -39,6 +45,28 @@
 
     &--active {
       cursor: default;
+    }
+
+    &--double {
+      display: inline-block;
+      padding: 7px 5px 7px 15px;
+      border-radius: 100px 0 0 100px;
+      margin-right: 2px;
+    }
+
+    &--add {
+      display: inline-block;
+      padding: 7px 10px 7px 5px;
+      border-radius: 0 100px 100px 0;
+
+      svg {
+        width: 10px;
+        height: 10px;
+      }
+
+      path {
+        fill: #90A4AE;
+      }
     }
   }
 
