added instructors page

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -70,6 +70,7 @@
 @import "components/messages";
 @import "components/message-form";
 @import "components/form-alert";
+@import "components/instructors";
 
 /*=== страницы ===*/
 @import "pages/layout";
