--- a/src/sass/components/profile-view.scss
+++ b/src/sass/components/profile-view.scss
@@ -81,12 +81,13 @@
 
     @media (max-width: $tablet) {
       margin-left: 0;
+      font-size: 12px;
     }
   }
 
   &__table {
     td:first-child {
-      width: 165px;
+      width: 150px;
       padding-bottom: 10px;
     }
   }
