added component progress-line

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -71,6 +71,7 @@
 @import "components/message-form";
 @import "components/form-alert";
 @import "components/instructors";
+@import "components/progress-line";
 
 /*=== страницы ===*/
 @import "pages/layout";
